fix: use signals for circular progress bar

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -581,6 +581,7 @@
                                 </mona-avatar>
                                 <mona-color-gradient [ngModel]="colorGradientColor"
                                                      (ngModelChange)="onColorGradientValueChange($event)"></mona-color-gradient>
+                                <mona-circular-progress-bar [value]="sliderValue" [color]="progressBarColorSelector"></mona-circular-progress-bar>
                             </div>
                         </div>
                     </ng-template>
