--- a/projects/mona-ui/src/lib/tree-view/components/tree-view-node/tree-view-node.component.scss
+++ b/projects/mona-ui/src/lib/tree-view/components/tree-view-node/tree-view-node.component.scss
@@ -40,8 +40,8 @@ div.mona-tree-view-node-text {
     min-width: 0;
     user-select: none;
     white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    //overflow: hidden;
+    //text-overflow: ellipsis;
 }
 
 div.mona-tree-view-drop-magnet {
