--- a/projects/mona-ui/src/lib/layout/avatar/avatar.component.html
+++ b/projects/mona-ui/src/lib/layout/avatar/avatar.component.html
@@ -1,10 +1,10 @@
 <div class="mona-avatar" [ngStyle]="avatarStyles()">
-    <img [src]="avatarImage()" [ngStyle]="{'border-radius': avatarBorderRadius()}"
-         class="mona-avatar-image"
-         *ngIf="avatarImage()" />
-    <div class="mona-avatar-label" [ngStyle]="avatarLabelStyles()"
-         *ngIf="!avatarImage() && avatarLabel()">{{avatarLabel()}}</div>
-    <ng-container *ngIf="!avatarImage() && !avatarLabel()">
+    @if (avatarImage()) {
+        <img [src]="avatarImage()" [ngStyle]="{'border-radius': avatarBorderRadius()}"
+             class="mona-avatar-image" alt=""/>
+    } @else if (!avatarImage() && avatarLabel()) {
+        <div class="mona-avatar-label" [ngStyle]="avatarLabelStyles()">{{avatarLabel()}}</div>
+    } @else if (!avatarImage() && !avatarLabel()) {
         <ng-content></ng-content>
-    </ng-container>
+    }
 </div>
