--- a/projects/mona-ui/src/lib/tree-view/components/tree-view/tree-view.component.scss
+++ b/projects/mona-ui/src/lib/tree-view/components/tree-view/tree-view.component.scss
@@ -4,12 +4,8 @@ div.mona-tree-view {
 
 ul {
     list-style-type: none;
-    overflow: hidden;
-
-    &.mona-tree-list {
-        margin-top: 10px;
-        padding-bottom: 2px;
-    }
+    width: max-content;
+    padding: 0 4px;
 
     & li {
         list-style-type: none;
@@ -19,7 +15,5 @@ ul {
 
     &.mona-subtree-list {
         padding-left: 19px;
-        //margin-top: 4px;
-        //padding-bottom: 2px;
     }
 }
