--- a/projects/mona-ui/src/lib/dropdowns/drop-down-tree/components/drop-down-tree/drop-down-tree.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/drop-down-tree/components/drop-down-tree/drop-down-tree.component.html
@@ -16,6 +16,9 @@
                         [textField]="textField"
                         [monaTreeViewSelectable]="selectableOptions"
                         [selectedKeys]="selectedTreeKeys()"
+                        [monaTreeViewExpandable]="{enabled: dropdownTreeService.expandableOptions.enabled}"
+                        [expandedKeys]="dropdownTreeService.expandedKeys()"
+                        (expandedKeysChange)="onExpandedKeysChange($event)"
                         (selectedKeysChange)="onSelectedKeysChange($event)"
                         (selectionChange)="onSelectionChange($event)"></mona-tree-view>
     </div>
