feat: dropdown tree item disabler

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -448,6 +448,7 @@
                                                      keyField="id"
                                                      childrenField="items"
                                                      textField="text"
+                                                     [itemDisabler]="dropdownTreeDisabler"
                                                      monaDropDownTreeExpandable
                                                      [ngModel]="dropdownTreeSelectedValue"
                                                      (ngModelChange)="onDropdownTreeValueChange($event)"
