refactor: use signals for treeview

--- a/projects/mona-ui/src/lib/tree-view/components/tree-view/tree-view.component.html
+++ b/projects/mona-ui/src/lib/tree-view/components/tree-view/tree-view.component.html
@@ -36,6 +36,6 @@
             </ng-container>
         </ng-template>
         <ng-container [ngTemplateOutlet]="treeTemplate"
-                      [ngTemplateOutletContext]="{$implicit: treeViewService.viewNodeList}"></ng-container>
+                      [ngTemplateOutletContext]="{$implicit: treeViewService.viewNodeList()}"></ng-container>
     </ul>
 </div>
