--- a/projects/mona-ui/src/lib/tree-view/components/tree-view/tree-view.component.scss
+++ b/projects/mona-ui/src/lib/tree-view/components/tree-view/tree-view.component.scss
@@ -17,3 +17,11 @@ ul {
         padding-left: 19px;
     }
 }
+
+div.mona-tree-view-filter-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 8px;
+    padding-top: 2px;
+}
